// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor plugins normalize-discriminator-mapping given Discriminator is defined and multiple allOf are present should add x-normalized-mapping field with normalized mapping 1`] = `
Object {
  components: Object {
    schemas: Object {
      Cat: Object {
        allOf: Array [
          Object {
            discriminator: Object {
              propertyName: petType,
              x-normalized-mapping: Object {
                Cat: Object {
                  allOf: [Circular],
                },
                Dog: Object {
                  allOf: Array [
                    Object {
                      discriminator: [Circular],
                      properties: Object {
                        petType: Object {
                          type: string,
                        },
                      },
                      type: object,
                    },
                    Object {
                      discriminator: Object {
                        mapping: Object {
                          Test1: #/components/schemas/Cat,
                          Test2: #/components/schemas/Dog,
                        },
                        propertyName: petType2,
                        x-normalized-mapping: Object {
                          Test1: Object {
                            allOf: [Circular],
                          },
                          Test2: Object {
                            allOf: [Circular],
                          },
                        },
                      },
                      properties: Object {
                        petType2: Object {
                          type: string,
                        },
                      },
                      type: object,
                    },
                    Object {
                      properties: Object {
                        barks: Object {
                          type: boolean,
                        },
                      },
                      type: object,
                    },
                  ],
                },
              },
            },
            properties: Object {
              petType: Object {
                type: string,
              },
            },
            type: object,
          },
          Object {
            discriminator: Object {
              mapping: Object {
                Test1: #/components/schemas/Cat,
                Test2: #/components/schemas/Dog,
              },
              propertyName: petType2,
              x-normalized-mapping: Object {
                Test1: Object {
                  allOf: [Circular],
                },
                Test2: Object {
                  allOf: Array [
                    Object {
                      discriminator: Object {
                        propertyName: petType,
                        x-normalized-mapping: Object {
                          Cat: Object {
                            allOf: [Circular],
                          },
                          Dog: Object {
                            allOf: [Circular],
                          },
                        },
                      },
                      properties: Object {
                        petType: Object {
                          type: string,
                        },
                      },
                      type: object,
                    },
                    Object {
                      discriminator: [Circular],
                      properties: Object {
                        petType2: Object {
                          type: string,
                        },
                      },
                      type: object,
                    },
                    Object {
                      properties: Object {
                        barks: Object {
                          type: boolean,
                        },
                      },
                      type: object,
                    },
                  ],
                },
              },
            },
            properties: Object {
              petType2: Object {
                type: string,
              },
            },
            type: object,
          },
          Object {
            properties: Object {
              meows: Object {
                type: boolean,
              },
            },
            type: object,
          },
        ],
      },
      Dog: Object {
        allOf: Array [
          Object {
            discriminator: Object {
              propertyName: petType,
              x-normalized-mapping: Object {
                Cat: Object {
                  allOf: Array [
                    Object {
                      discriminator: [Circular],
                      properties: Object {
                        petType: Object {
                          type: string,
                        },
                      },
                      type: object,
                    },
                    Object {
                      discriminator: Object {
                        mapping: Object {
                          Test1: #/components/schemas/Cat,
                          Test2: #/components/schemas/Dog,
                        },
                        propertyName: petType2,
                        x-normalized-mapping: Object {
                          Test1: Object {
                            allOf: [Circular],
                          },
                          Test2: Object {
                            allOf: [Circular],
                          },
                        },
                      },
                      properties: Object {
                        petType2: Object {
                          type: string,
                        },
                      },
                      type: object,
                    },
                    Object {
                      properties: Object {
                        meows: Object {
                          type: boolean,
                        },
                      },
                      type: object,
                    },
                  ],
                },
                Dog: Object {
                  allOf: [Circular],
                },
              },
            },
            properties: Object {
              petType: Object {
                type: string,
              },
            },
            type: object,
          },
          Object {
            discriminator: Object {
              mapping: Object {
                Test1: #/components/schemas/Cat,
                Test2: #/components/schemas/Dog,
              },
              propertyName: petType2,
              x-normalized-mapping: Object {
                Test1: Object {
                  allOf: Array [
                    Object {
                      discriminator: Object {
                        propertyName: petType,
                        x-normalized-mapping: Object {
                          Cat: Object {
                            allOf: [Circular],
                          },
                          Dog: Object {
                            allOf: [Circular],
                          },
                        },
                      },
                      properties: Object {
                        petType: Object {
                          type: string,
                        },
                      },
                      type: object,
                    },
                    Object {
                      discriminator: [Circular],
                      properties: Object {
                        petType2: Object {
                          type: string,
                        },
                      },
                      type: object,
                    },
                    Object {
                      properties: Object {
                        meows: Object {
                          type: boolean,
                        },
                      },
                      type: object,
                    },
                  ],
                },
                Test2: Object {
                  allOf: [Circular],
                },
              },
            },
            properties: Object {
              petType2: Object {
                type: string,
              },
            },
            type: object,
          },
          Object {
            properties: Object {
              barks: Object {
                type: boolean,
              },
            },
            type: object,
          },
        ],
      },
      Pet: Object {
        discriminator: Object {
          propertyName: petType,
          x-normalized-mapping: Object {
            Cat: Object {
              allOf: Array [
                Object {
                  discriminator: [Circular],
                  properties: Object {
                    petType: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  discriminator: Object {
                    mapping: Object {
                      Test1: #/components/schemas/Cat,
                      Test2: #/components/schemas/Dog,
                    },
                    propertyName: petType2,
                    x-normalized-mapping: Object {
                      Test1: Object {
                        allOf: [Circular],
                      },
                      Test2: Object {
                        allOf: Array [
                          Object {
                            discriminator: [Circular],
                            properties: Object {
                              petType: Object {
                                type: string,
                              },
                            },
                            type: object,
                          },
                          Object {
                            discriminator: [Circular],
                            properties: Object {
                              petType2: Object {
                                type: string,
                              },
                            },
                            type: object,
                          },
                          Object {
                            properties: Object {
                              barks: Object {
                                type: boolean,
                              },
                            },
                            type: object,
                          },
                        ],
                      },
                    },
                  },
                  properties: Object {
                    petType2: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  properties: Object {
                    meows: Object {
                      type: boolean,
                    },
                  },
                  type: object,
                },
              ],
            },
            Dog: Object {
              allOf: Array [
                Object {
                  discriminator: [Circular],
                  properties: Object {
                    petType: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  discriminator: Object {
                    mapping: Object {
                      Test1: #/components/schemas/Cat,
                      Test2: #/components/schemas/Dog,
                    },
                    propertyName: petType2,
                    x-normalized-mapping: Object {
                      Test1: Object {
                        allOf: Array [
                          Object {
                            discriminator: [Circular],
                            properties: Object {
                              petType: Object {
                                type: string,
                              },
                            },
                            type: object,
                          },
                          Object {
                            discriminator: [Circular],
                            properties: Object {
                              petType2: Object {
                                type: string,
                              },
                            },
                            type: object,
                          },
                          Object {
                            properties: Object {
                              meows: Object {
                                type: boolean,
                              },
                            },
                            type: object,
                          },
                        ],
                      },
                      Test2: Object {
                        allOf: [Circular],
                      },
                    },
                  },
                  properties: Object {
                    petType2: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  properties: Object {
                    barks: Object {
                      type: boolean,
                    },
                  },
                  type: object,
                },
              ],
            },
          },
        },
        properties: Object {
          petType: Object {
            type: string,
          },
        },
        type: object,
      },
      Pet2: Object {
        discriminator: Object {
          mapping: Object {
            Test1: #/components/schemas/Cat,
            Test2: #/components/schemas/Dog,
          },
          propertyName: petType2,
          x-normalized-mapping: Object {
            Test1: Object {
              allOf: Array [
                Object {
                  discriminator: Object {
                    propertyName: petType,
                    x-normalized-mapping: Object {
                      Cat: Object {
                        allOf: [Circular],
                      },
                      Dog: Object {
                        allOf: Array [
                          Object {
                            discriminator: [Circular],
                            properties: Object {
                              petType: Object {
                                type: string,
                              },
                            },
                            type: object,
                          },
                          Object {
                            discriminator: [Circular],
                            properties: Object {
                              petType2: Object {
                                type: string,
                              },
                            },
                            type: object,
                          },
                          Object {
                            properties: Object {
                              barks: Object {
                                type: boolean,
                              },
                            },
                            type: object,
                          },
                        ],
                      },
                    },
                  },
                  properties: Object {
                    petType: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  discriminator: [Circular],
                  properties: Object {
                    petType2: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  properties: Object {
                    meows: Object {
                      type: boolean,
                    },
                  },
                  type: object,
                },
              ],
            },
            Test2: Object {
              allOf: Array [
                Object {
                  discriminator: Object {
                    propertyName: petType,
                    x-normalized-mapping: Object {
                      Cat: Object {
                        allOf: Array [
                          Object {
                            discriminator: [Circular],
                            properties: Object {
                              petType: Object {
                                type: string,
                              },
                            },
                            type: object,
                          },
                          Object {
                            discriminator: [Circular],
                            properties: Object {
                              petType2: Object {
                                type: string,
                              },
                            },
                            type: object,
                          },
                          Object {
                            properties: Object {
                              meows: Object {
                                type: boolean,
                              },
                            },
                            type: object,
                          },
                        ],
                      },
                      Dog: Object {
                        allOf: [Circular],
                      },
                    },
                  },
                  properties: Object {
                    petType: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  discriminator: [Circular],
                  properties: Object {
                    petType2: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  properties: Object {
                    barks: Object {
                      type: boolean,
                    },
                  },
                  type: object,
                },
              ],
            },
          },
        },
        properties: Object {
          petType2: Object {
            type: string,
          },
        },
        type: object,
      },
    },
  },
  openapi: 3.1.0,
  x-normalized: Object {
    discriminator-mapping: Array [
      /components/schemas/Pet,
      /components/schemas/Pet2,
    ],
  },
}
`;

exports[`refractor plugins normalize-discriminator-mapping given Discriminator.mapping is defined and allOf is present should add x-normalized-mapping field with normalized mapping 1`] = `
Object {
  components: Object {
    schemas: Object {
      Cat: Object {
        allOf: Array [
          Object {
            discriminator: Object {
              mapping: Object {
                Test1: #/components/schemas/Cat,
                Test2: #/components/schemas/Dog,
              },
              propertyName: petType,
              x-normalized-mapping: Object {
                Test1: Object {
                  allOf: [Circular],
                },
                Test2: Object {
                  allOf: Array [
                    Object {
                      discriminator: [Circular],
                      properties: Object {
                        petType: Object {
                          type: string,
                        },
                      },
                      type: object,
                    },
                    Object {
                      properties: Object {
                        barks: Object {
                          type: boolean,
                        },
                      },
                      type: object,
                    },
                  ],
                },
              },
            },
            properties: Object {
              petType: Object {
                type: string,
              },
            },
            type: object,
          },
          Object {
            properties: Object {
              meows: Object {
                type: boolean,
              },
            },
            type: object,
          },
        ],
      },
      Dog: Object {
        allOf: Array [
          Object {
            discriminator: Object {
              mapping: Object {
                Test1: #/components/schemas/Cat,
                Test2: #/components/schemas/Dog,
              },
              propertyName: petType,
              x-normalized-mapping: Object {
                Test1: Object {
                  allOf: Array [
                    Object {
                      discriminator: [Circular],
                      properties: Object {
                        petType: Object {
                          type: string,
                        },
                      },
                      type: object,
                    },
                    Object {
                      properties: Object {
                        meows: Object {
                          type: boolean,
                        },
                      },
                      type: object,
                    },
                  ],
                },
                Test2: Object {
                  allOf: [Circular],
                },
              },
            },
            properties: Object {
              petType: Object {
                type: string,
              },
            },
            type: object,
          },
          Object {
            properties: Object {
              barks: Object {
                type: boolean,
              },
            },
            type: object,
          },
        ],
      },
      Pet: Object {
        discriminator: Object {
          mapping: Object {
            Test1: #/components/schemas/Cat,
            Test2: #/components/schemas/Dog,
          },
          propertyName: petType,
          x-normalized-mapping: Object {
            Test1: Object {
              allOf: Array [
                Object {
                  discriminator: [Circular],
                  properties: Object {
                    petType: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  properties: Object {
                    meows: Object {
                      type: boolean,
                    },
                  },
                  type: object,
                },
              ],
            },
            Test2: Object {
              allOf: Array [
                Object {
                  discriminator: [Circular],
                  properties: Object {
                    petType: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  properties: Object {
                    barks: Object {
                      type: boolean,
                    },
                  },
                  type: object,
                },
              ],
            },
          },
        },
        properties: Object {
          petType: Object {
            type: string,
          },
        },
        type: object,
      },
    },
  },
  openapi: 3.1.0,
  x-normalized: Object {
    discriminator-mapping: Array [
      /components/schemas/Pet,
    ],
  },
}
`;

exports[`refractor plugins normalize-discriminator-mapping given Discriminator.mapping is not defined and allOf is present should add x-normalized-mapping field with normalized mapping 1`] = `
Object {
  components: Object {
    schemas: Object {
      Cat: Object {
        allOf: Array [
          Object {
            discriminator: Object {
              propertyName: petType,
              x-normalized-mapping: Object {
                Cat: Object {
                  allOf: [Circular],
                },
                Dog: Object {
                  allOf: Array [
                    Object {
                      discriminator: [Circular],
                      properties: Object {
                        petType: Object {
                          type: string,
                        },
                      },
                      type: object,
                    },
                    Object {
                      properties: Object {
                        barks: Object {
                          type: boolean,
                        },
                      },
                      type: object,
                    },
                  ],
                },
              },
            },
            properties: Object {
              petType: Object {
                type: string,
              },
            },
            type: object,
          },
          Object {
            properties: Object {
              meows: Object {
                type: boolean,
              },
            },
            type: object,
          },
        ],
      },
      Dog: Object {
        allOf: Array [
          Object {
            discriminator: Object {
              propertyName: petType,
              x-normalized-mapping: Object {
                Cat: Object {
                  allOf: Array [
                    Object {
                      discriminator: [Circular],
                      properties: Object {
                        petType: Object {
                          type: string,
                        },
                      },
                      type: object,
                    },
                    Object {
                      properties: Object {
                        meows: Object {
                          type: boolean,
                        },
                      },
                      type: object,
                    },
                  ],
                },
                Dog: Object {
                  allOf: [Circular],
                },
              },
            },
            properties: Object {
              petType: Object {
                type: string,
              },
            },
            type: object,
          },
          Object {
            properties: Object {
              barks: Object {
                type: boolean,
              },
            },
            type: object,
          },
        ],
      },
      Pet: Object {
        discriminator: Object {
          propertyName: petType,
          x-normalized-mapping: Object {
            Cat: Object {
              allOf: Array [
                Object {
                  discriminator: [Circular],
                  properties: Object {
                    petType: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  properties: Object {
                    meows: Object {
                      type: boolean,
                    },
                  },
                  type: object,
                },
              ],
            },
            Dog: Object {
              allOf: Array [
                Object {
                  discriminator: [Circular],
                  properties: Object {
                    petType: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  properties: Object {
                    barks: Object {
                      type: boolean,
                    },
                  },
                  type: object,
                },
              ],
            },
          },
        },
        properties: Object {
          petType: Object {
            type: string,
          },
        },
        type: object,
      },
    },
  },
  openapi: 3.1.0,
  x-normalized: Object {
    discriminator-mapping: Array [
      /components/schemas/Pet,
    ],
  },
}
`;

exports[`refractor plugins normalize-discriminator-mapping given Discriminator.mapping is not defined and oneOf contains an external reference should not add x-normalized-mapping field with normalized mapping 1`] = `
Object {
  components: Object {
    schemas: Object {
      Cat: Object {
        allOf: Array [
          Object {
            properties: Object {
              petType: Object {
                type: string,
              },
            },
            type: object,
          },
          Object {
            properties: Object {
              meows: Object {
                type: boolean,
              },
            },
            type: object,
          },
        ],
      },
      MyResponse: Object {
        discriminator: Object {
          propertyName: petType,
        },
        oneOf: Array [
          Object {
            allOf: Array [
              Object {
                properties: Object {
                  petType: Object {
                    type: string,
                  },
                },
                type: object,
              },
              Object {
                properties: Object {
                  meows: Object {
                    type: boolean,
                  },
                },
                type: object,
              },
            ],
          },
          Object {
            properties: Object {
              barks: Object {
                type: boolean,
              },
              petType: Object {
                type: string,
              },
            },
            type: object,
          },
        ],
        type: object,
      },
      Pet: Object {
        properties: Object {
          petType: Object {
            type: string,
          },
        },
        type: object,
      },
    },
  },
  openapi: 3.1.0,
  x-normalized: Object {
    discriminator-mapping: Array [],
  },
}
`;

exports[`refractor plugins normalize-discriminator-mapping given Discriminator.mapping is not defined should add x-normalized-mapping field with normalized mapping 1`] = `
Object {
  components: Object {
    schemas: Object {
      Cat: Object {
        allOf: Array [
          Object {
            properties: Object {
              petType: Object {
                type: string,
              },
            },
            type: object,
          },
          Object {
            properties: Object {
              meows: Object {
                type: boolean,
              },
            },
            type: object,
          },
        ],
      },
      Dog: Object {
        allOf: Array [
          Object {
            properties: Object {
              petType: Object {
                type: string,
              },
            },
            type: object,
          },
          Object {
            properties: Object {
              barks: Object {
                type: boolean,
              },
            },
            type: object,
          },
        ],
      },
      MyResponse: Object {
        discriminator: Object {
          propertyName: petType,
          x-normalized-mapping: Object {
            Cat: Object {
              allOf: Array [
                Object {
                  properties: Object {
                    petType: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  properties: Object {
                    meows: Object {
                      type: boolean,
                    },
                  },
                  type: object,
                },
              ],
            },
            Dog: Object {
              allOf: Array [
                Object {
                  properties: Object {
                    petType: Object {
                      type: string,
                    },
                  },
                  type: object,
                },
                Object {
                  properties: Object {
                    barks: Object {
                      type: boolean,
                    },
                  },
                  type: object,
                },
              ],
            },
          },
        },
        oneOf: Array [
          Object {
            allOf: Array [
              Object {
                properties: Object {
                  petType: Object {
                    type: string,
                  },
                },
                type: object,
              },
              Object {
                properties: Object {
                  meows: Object {
                    type: boolean,
                  },
                },
                type: object,
              },
            ],
          },
          Object {
            allOf: Array [
              Object {
                properties: Object {
                  petType: Object {
                    type: string,
                  },
                },
                type: object,
              },
              Object {
                properties: Object {
                  barks: Object {
                    type: boolean,
                  },
                },
                type: object,
              },
            ],
          },
        ],
        type: object,
      },
      Pet: Object {
        properties: Object {
          petType: Object {
            type: string,
          },
        },
        type: object,
      },
    },
  },
  openapi: 3.1.0,
  x-normalized: Object {
    discriminator-mapping: Array [
      /components/schemas/MyResponse,
    ],
  },
}
`;
